hn_tests/opt/failing/isDigit.hn
isDigit c = {
	lt c d = less c d
	_not (_or (_not (_not (lt 48 c))) (_not (lt c 58)))
}